Fix spacing for undo rebut button

--- a/public/css/sass/review_improved.scss
+++ b/public/css/sass/review_improved.scss
@@ -287,7 +287,7 @@ section {
 
 .review-issue-comment-reply textarea {
     width: 95%;
-    margin: 10px 0;
+    margin-top: 10px;
 }
 
 .review-previous-versions-wrapper {
@@ -507,7 +507,7 @@ a.cancel-project:hover {
 }
 
 .review-issue-comment-buttons {
-    margin: 5px 0;
+    margin: 15px 0;
 }
 
 .review-issue-selection-panel {
